--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Header
 menu:
-  #设置菜单
-  #所有文章: /archives
-  #主页: /
-  #前端开发: /categories/front
-  #工作日志: /categories/work
-  #点滴生活: /categories/life
+  #主页: /archives
+  主页: /
+  前端开发: /categories/front
+  工作日志: /categories/work
+  点滴生活: /categories/life
 
 subnav:
-  #二级菜单
   github: "https://github.com/Kiritor"
   weibo: "http://weibo.com/3206206100/profile?topnav=1&wvr=6"
   rss: "#"
@@ -30,17 +28,26 @@ mathjax: true
 
 # Miscellaneous
 google_analytics: ''
-#站点图标
 favicon: /img/leaves.ico
 
 #你的头像url
 avatar: "http://kiritor.github.io/img/lcore.jpg"
 #是否开启分享
 baidushare: true
-#是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
-duoshuo_shortname: kiritor
 #是否开启云标签
 tagcloud: true
+
+#是否开启多说
+duoshuo_shortname: kiritor
+#是否开启多说最近评论:悬浮于首页
+recentComment: true
+
+#是否开启最近通知
+recent: true
+recentContent: 最近研究shiro中......
+
+#是否开启微简历
+resume: true
 
 #是否开启友情链接
 #不开启——
