--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ menu:
   #主页: /
   前端开发: /categories/front
   工作日志: /categories/work
-  点滴生活: /categories/life
+  低吟浅谈: /categories/life
 
 subnav:
   github: "https://github.com/Kiritor"
@@ -59,7 +59,7 @@ recent: true
 recentContent: 最近打算回归学习,记录一点东西,慢慢找回写博客的习惯...
 
 #是否开启微简历
-resume: false
+resume: true
 
 #是否开启友情链接
 #不开启——
